--- a/CafeteriaApp/src/app/myorders/myorders.component.html
+++ b/CafeteriaApp/src/app/myorders/myorders.component.html
@@ -1,12 +1,25 @@
+<form class="form-container row" method="POST" (ngSubmit)="filter()" [formGroup]="filterForm">
+  
+  <mat-form-field class="col-md-5">
+    <input matInput type="date" formControlName="fromDate" placeholder="From Date" class="full-width" />
+  </mat-form-field>
+
+  <mat-form-field class="col-md-5">
+    <input class="full-width" matInput type="date" formControlName="toDate" placeholder="To Date" />
+  </mat-form-field>
+
+  <button [disabled]="!filterForm.valid" class="col-md-2 btn-sm" mat-raised-button color="primary">Filter</button>
+</form>
+
 <ul class="list-group" *ngFor="let item of orders" style="margin: 100px auto;width: 70%;">
   <li class="list-group-item">
-      <dl>
-          <dt>Order Id: {{item.Id}} <br> Notes: {{item.Notes || "None"}}</dt>
-          <dt>
+      <div>
+          <div>Order Id: {{item.Id}} <br> Notes: {{item.Notes || "None"}}</div>
+          <div>
             <h3 *ngIf="item.Status == 1" style="color: red;">Processing...</h3>
             <h3 *ngIf="item.Status == 2" style="color: green;">Done</h3>
-          </dt>
-      </dl>
+          </div>          
+      </div>
       <div class="row">                
         <div *ngFor="let nestedItem of item.OrderProducts">
             <div class="card col3" style="width: 10rem;margin: 20px;">
@@ -14,7 +27,7 @@
                 <div class="card-body">
                   <h5 class="card-title">{{nestedItem.Product.Name}}</h5>                  
                   <span>Quantity: {{nestedItem.Quantity}}</span> <br>
-                  <span>Total: {{nestedItem.Quantity * nestedItem.Product.Price}} EGP</span>                  
+                  <span>Total: {{nestedItem.Quantity * nestedItem.Product.Price}} EGP</span>
                 </div>
               </div>            
         </div>        
